--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
 body {
   background-color: #111827;
   color: white;
+  width: 30%;
+  margin: auto;
+}
+
+#calculator {
+  background-color: #414868;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#buttons {
+  display: flex;
 }
